# kinect_API

./: CMakeLists.txt  README.md
Kinect_Accessor/: CMakeLists.txt  Kinect_Accessor.cpp  Kinect_Accessor.h
src/: Kinect_Accessor.cpp  Kinect_Accessor.h  kinect_api.cpp  kinect_api.h
